force-app/main/default/objects/TT_SOP_Automation__c/TT_SOP_Automation__c.object-meta.xml
<CustomObject>
    <label>TT SOP Automation</label>
    <nameField>
        <label>TT SOP Automation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TT SOP Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>