force-app/main/default/objects/TT_SOP_Automation__c/fields/Automation__c.field-meta.xml
<CustomField>
    <fullName>Automation__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Automation</label>
    <referenceTo>TT_Automation__c</referenceTo>
    <relationshipLabel>TT SOP Automations</relationshipLabel>
    <relationshipName>TT_SOP_Automations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>