force-app/main/default/objects/TT_SOP_Automation__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>TT SOP Automations</relationshipLabel>
    <relationshipName>TT_SOP_Automations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>