force-app/main/default/objects/TT_SOP_Automation__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Triggers</fullName>
            </value>
            <value>
                <fullName>Is Triggered By</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>